<resources>
    <string name="app_name">Dog Love</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_crear_cuenta">Crea tu perfil</string>
    <string name="title_activity_crear_perfil_mascota">Crea el perfil para tu mascota</string>
    <string name="title_activity_perfil_dueno">Mi perfil</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="title_activity_match_patita">MatchPatitaActivity</string>
    <string-array name="raza_array">
        <item>Bulldog</item>
        <item>Poodle</item>
    </string-array>
    <string name="facebook_app_id">959635390742149</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="message_hint">Escribe un mensaje</string>
    <string name="send">Enviar</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>

    <string-array name="raza_distancia">
        <item>100</item>
        <item>200</item>
    </string-array>

    <string name="title_activity_drawer_prueba">DrawerPrueba</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="men_configuracion">Configuracion</string>
    <string name="men_mi_perfil">Perfil</string>
    <string name="men_swipe">Buscar pareja</string>
    <string name="men_pref_busqueda">Preferencias de Busqueda</string>
    <string name="men_servicios">Servicios</string>
    <string name="men_historial">Historial</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
